[package]
name = "music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1",features = ["json"]}
base64 = "0.13.0"
diesel = {version = "1.4", features = ["mysql"]}
dotenv = "0.15.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_mysql_pool"]